Use Long.valueOf(0), to reuse Long instances; token instances can't be shared easily as tokens are mutable